--- a/puppeteer-wp/package.json
+++ b/puppeteer-wp/package.json
@@ -11,6 +11,7 @@
   "devDependencies": {
     "chai": "^4.3.4",
     "mocha": "^9.0.3",
+    "proxy-chain": "^1.0.2",
     "puppeteer": "^10.2.0"
   }
 }
